[package]
name = "vulkano_egui_game_editor_demo"
version = "0.1.0"
edition = "2021"


[dependencies]
vulkano = "0.27.1"
vulkano-shaders = "0.27.1"
vulkano-win = "0.27.1"
winit = "0.25"
tobj = "3.2.0"
image = "0.23.14"
egui_winit_vulkano = "0.14.0"
ultraviolet = "0.8.1"
egui = "0.15.0"
egui_demo_lib = "0.15.0"